; ModuleID = '/home/carl/AnghaBench/lwan/src/samples/techempower/extr_techempower.c_db_query.c'
source_filename = "/home/carl/AnghaBench/lwan/src/samples/techempower/extr_techempower.c_db_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.db_stmt = type { i32 }
%struct.db_row = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"id\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"randomNumber\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.db_stmt*, %struct.db_row*, %struct.db_row*)* @db_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @db_query(%struct.db_stmt* %0, %struct.db_row* %1, %struct.db_row* %2) #0 {
  %4 = alloca %struct.db_stmt*, align 8
  %5 = alloca %struct.db_row*, align 8
  %6 = alloca %struct.db_row*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.db_stmt* %0, %struct.db_stmt** %4, align 8
  store %struct.db_row* %1, %struct.db_row** %5, align 8
  store %struct.db_row* %2, %struct.db_row** %6, align 8
  store i32* null, i32** %7, align 8
  %9 = call i32 (...) @rand()
  %10 = srem i32 %9, 10000
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = load %struct.db_row*, %struct.db_row** %5, align 8
  %13 = getelementptr inbounds %struct.db_row, %struct.db_row* %12, i64 0
  %14 = getelementptr inbounds %struct.db_row, %struct.db_row* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %11, i32* %15, align 4
  %16 = load %struct.db_stmt*, %struct.db_stmt** %4, align 8
  %17 = load %struct.db_row*, %struct.db_row** %5, align 8
  %18 = call i32 @db_stmt_bind(%struct.db_stmt* %16, %struct.db_row* %17, i32 1)
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = call i64 @UNLIKELY(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %3
  br label %57

25:                                               ; preds = %3
  %26 = load %struct.db_stmt*, %struct.db_stmt** %4, align 8
  %27 = load %struct.db_row*, %struct.db_row** %6, align 8
  %28 = call i32 @db_stmt_step(%struct.db_stmt* %26, %struct.db_row* %27)
  %29 = icmp ne i32 %28, 0
  %30 = xor i1 %29, true
  %31 = zext i1 %30 to i32
  %32 = call i64 @UNLIKELY(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %25
  br label %57

35:                                               ; preds = %25
  %36 = call i32* (...) @json_mkobject()
  store i32* %36, i32** %7, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = icmp ne i32* %37, null
  %39 = xor i1 %38, true
  %40 = zext i1 %39 to i32
  %41 = call i64 @UNLIKELY(i32 %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %35
  br label %57

44:                                               ; preds = %35
  %45 = load i32*, i32** %7, align 8
  %46 = load i32, i32* %8, align 4
  %47 = call i32 @json_mknumber(i32 %46)
  %48 = call i32 @json_append_member(i32* %45, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %47)
  %49 = load i32*, i32** %7, align 8
  %50 = load %struct.db_row*, %struct.db_row** %6, align 8
  %51 = getelementptr inbounds %struct.db_row, %struct.db_row* %50, i64 0
  %52 = getelementptr inbounds %struct.db_row, %struct.db_row* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @json_mknumber(i32 %54)
  %56 = call i32 @json_append_member(i32* %49, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %55)
  br label %57

57:                                               ; preds = %44, %43, %34, %24
  %58 = load i32*, i32** %7, align 8
  ret i32* %58
}

declare dso_local i32 @rand(...) #1

declare dso_local i64 @UNLIKELY(i32) #1

declare dso_local i32 @db_stmt_bind(%struct.db_stmt*, %struct.db_row*, i32) #1

declare dso_local i32 @db_stmt_step(%struct.db_stmt*, %struct.db_row*) #1

declare dso_local i32* @json_mkobject(...) #1

declare dso_local i32 @json_append_member(i32*, i8*, i32) #1

declare dso_local i32 @json_mknumber(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
